--- a/node/member/public/index.html
+++ b/node/member/public/index.html
@@ -4,22 +4,27 @@
 <head>
     <meta charset="utf-8" />
     <title>Login</title>
-    <link type="text/css" rel="stylesheet" href="mystyle.css">
+    <link type="text/css" rel="stylesheet" href="mystyle.css" />
 </head>
 
 <body>
     <h3>Login</h3>
-    <hr>
-    <form action="/insert" target="targetURL" name="userForm" method="post">
-        <p>Userid : <input type="text" size="15" name="id" /></p>
-        <p>Password : <input type="password" size="15" name="pw" /></p>
-        <input type="submit" value="로그인" />&nbsp;&nbsp;
-        <!--<input type="button" value="로그인" onclick='document.targetURL.location.href="/selectQuery?userid="
-      +document.userForm.id.value' />&nbsp;&nbsp; -->
-        <input type="reset" value="취소" /><br /><br />
-        <!--<button type="button" onClick="location.href='main.html'">취소</button> -->
-    </form>
-    <a href="register.html">회원가입</a>
+    <hr />
+    <div class="box">
+        <form action="/login" name="userForm" method="post">
+            <div>
+                <p>User-id&nbsp;&nbsp;: <input type="text" size="15" name="id" /></p>
+                <p>Password : <input type="password" size="15" name="pw" /></p>
+            </div>
+            <div class="box-inner">
+                <input type="submit" value="로그인" />&nbsp;&nbsp;
+                <input type="reset" value="취소" /><br /><br />
+        </form>
+        <a href="register.html" style="text-decoration: none">회원가입</a>
+
+    </div>
+    </div>
+    <hr />
 </body>
 
 </html>
