--- a/node/member/public/member.html
+++ b/node/member/public/member.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>User Authentication</title>
+    <title>UserAuthentication</title>
     <link type="text/css" rel="stylesheet" href="mystyle.css">
 </head>
 
 <body>
-    <h3>User Authentication</h3>
+    <h3>UserAuthentication</h3>
+    <h2>어서오세요</h2>
     <hr>
     <form action="/insert" target="targetURL" name="userForm" method="post">
         <p>Userid : <input type="text" size="15" name="id" /></p>
