--- a/node/member/public/register.html
+++ b/node/member/public/register.html
@@ -4,17 +4,24 @@
 <head>
     <meta charset="utf-8" />
     <title>Register</title>
+    <link type="text/css" rel="stylesheet" href="mystyle.css">
 </head>
 
 <body>
     <h3>Register</h3>
     <hr />
-    <form action="/register" name="userForm" method="post">
-        <p>Userid : <input type="text" size="15" name="id" /></p>
-        <p>Password : <input type="password" size="15" name="pw" /></p>
-        <input type="submit" value="회원가입" />&nbsp;&nbsp;
-        <input type="reset" value="취소" />
-    </form>
+    <div class="box">
+        <form action="/register" name="userForm" method="post">
+
+            <p>Userid&nbsp;&nbsp; : <input type="text" size="15" name="id" /></p>
+            <p>Password : <input type="password" size="15" name="pw" /></p>
+
+            <div class="box-inner">
+                <input type="submit" value="회원가입" />&nbsp;&nbsp;
+                <input type="reset" value="취소" />
+        </form>
+    </div>
+    </div>
 </body>
 
 </html>
