main_register_edit

--- a/node/member/public/member.html
+++ b/node/member/public/member.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>UserAuthentication</title>
+    <title>너부리는내일나한테까만돌맹이를줄꺼야</title>
     <link type="text/css" rel="stylesheet" href="mystyle.css">
 </head>
 
 <body>
-    <h3>UserAuthentication</h3>
-    <h2>어서오세요</h2>
+    <h3>포로리한테는땅강아지를줄꺼야</h3>
+    <h2>그러니까</h2>
     <hr>
     <form action="/insert" target="targetURL" name="userForm" method="post">
         <p>Userid : <input type="text" size="15" name="id" /></p>
@@ -23,7 +23,9 @@
         <button type="submit" formaction="/delete">post delete</button> &nbsp;&nbsp;
     </form>
     <hr />
-    <iframe name="targetURL" width="70%" height="500" style="border: none;" src="/hello"></iframe>
+    <h1>헛소리하지마 임마</h1>
+    <iframe name="targetURL" width="70%" height="500" style="border: none;"
+        src="https://media.tenor.com/scdt09EktqwAAAAC/bonobono-hey-you.gif"></iframe>
 </body>
 
 </html>
