--- a/node/member/public/register.html
+++ b/node/member/public/register.html
@@ -15,7 +15,8 @@
 
             <p>Userid&nbsp;&nbsp; : <input type="text" size="15" name="id" /></p>
             <p>Password : <input type="password" size="15" name="pw" /></p>
-
+            <!--<input type="submit" value="회원가입" onClick="location.href='index.html'" /> &nbsp;&nbsp;
+                <button type="button" onClick="location.href='main.html'">취소</button>-->
             <div class="box-inner">
                 <input type="submit" value="회원가입" />&nbsp;&nbsp;
                 <input type="reset" value="취소" />
