--- a/html/achrive/6/ex6-18.html
+++ b/html/achrive/6/ex6-18.html
@@ -1,22 +1,72 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>while 문</title>
-</head>
-<body>
-<h3>while 문으로 0에서 n까지 합</h3>
-<hr>
-<script>
-	let n = prompt("0보다 큰 정수를 입력하세요", 0); 
-	n = parseInt(n); // 문자열을 숫자로 바꿈
 
-	let i=0, sum=0;
-	while(i<=n) { // i가 0에서 n까지 반복
-		sum += i;
-		i++;
-	}
-	document.write("0에서 " + n + "까지 합은 " + sum);
-</script>
+<head>
+	<meta charset="UTF-8">
+	<title>while 문</title>
+</head>
+
+<body>
+	<h3>while 문으로 달력을 출력</h3>
+	<hr>
+	<script>
+
+		let n = prompt("0보다 큰 정수를 입력하세요", 0);
+		n = parseInt(n); // 문자열 n을 숫자로 바꿈
+		let i = 0, sum = 0;
+
+		if (n == 28 || n == 30 || n == 31) {
+			for (i = 1; i <= n; i++) //for문으로 i는 28 30 31과 같아질 때 까지 1씩 증가
+				document.write("&nbsp;&nbsp;" + i + "&nbsp;&nbsp;");
+
+			if (i % 7 == 0) {
+				document.wirte("<br>")
+
+				break;
+			}
+
+
+			// while (i <= n) { // i가 0에서 n까지 반복
+			// 	sum += i;
+			// 	i++;
+		}
+
+		// else if (n == 30) {
+		// 	for (i = 1; i <= n; i++)//for문으로 i는 28과 같아질 때 까지 1씩 증가
+		// 		document.write("&nbsp;&nbsp;" + i + "&nbsp;&nbsp;");
+
+		// 	if (i % 7 == 0)
+		// 		if (i % 7 == 0) document.wirte("<br>")
+
+		// 	break;
+
+		// while (i <= n) { // i가 0에서 n까지 반복
+		// 	sum += i;
+		// 	i++;
+
+		// }
+		// else if (n == 31) {
+		// 	for (i = 1; i <= n; i++) //for문으로 i는 28과 같아질 때 까지 1씩 증가
+		// 		document.write("&nbsp;&nbsp;" + i + "&nbsp;&nbsp;");
+
+		// 	if (i % 7 == 0) document.wirte("<br>")
+		// 	break;
+
+		// while (i <= n) { // i가 0에서 n까지 반복
+		// 	sum += i;
+		// 	i++;
+
+		// while (i <= n) { // i가 0에서 n까지 반복
+		// 	sum += i;
+		// 	i++;
+		// }
+
+		else {
+			alert("28 30 31 중에서 입력하세요");
+			continue;
+		}
+		// document.write("0에서 " + n + "까지 합은 " + sum);
+	</script>
 </body>
+
 </html>
