--- a/html/achrive/7/ex7-05.html
+++ b/html/achrive/7/ex7-05.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Date 객체로 현재 시간 알아내기</title>
-</head>
-<body>
-<h3>Date 객체로 현재 시간 알아내기</h3>
-<hr>
-<script>
-	let now = new Date(); // 현재 시간 값을 가진 Date 객체 생성
-	document.write("현재 시간 : " + now.toUTCString()
-				+ "<br><hr>");
-	document.write(now.getFullYear() + "년도<br>");
-	document.write(now.getMonth() + 1 + "월<br>");
-	document.write(now.getDate() + "일<br>");
-	document.write(now.getHours() + "시<br>");
-	document.write(now.getMinutes() + "분<br>");
-	document.write(now.getSeconds() + "초<br>");
-	document.write(now.getMilliseconds()
-				+ "밀리초<br><hr>");
 
-	let next = new Date(2023, 7, 15, 12, 12, 12); // 7은 8월
-	document.write("next.toLocaleString() : "
-				+ next.toLocaleString() + "<br>");
-</script>
+<head>
+	<meta charset="UTF-8">
+	<title>Date 객체로 현재 시간 알아내기</title>
+</head>
+
+<body>
+	<h3>Date 객체로 현재 시간 알아내기</h3>
+	<hr>
+	<script>
+		let now = new Date(); // 현재 시간 값을 가진 Date 객체 생성
+		document.write("현재 시간 : " + now.toUTCString()
+			+ "<br><hr>");
+		/*
+		document.write(now.getFullYear() + "년도<br>");
+		document.write(now.getMonth() + 1 + "월<br>");
+		document.write(now.getDate() + "일<br>");
+		document.write(now.getHours() + "시<br>");
+		document.write(now.getMinutes() + "분<br>");
+		document.write(now.getSeconds() + "초<br>");
+		document.write(now.getMilliseconds()
+			+ "밀리초<br><hr>");*/
+
+		let beforedate = new Date(2023, 02, 06, 9, 0, 0); // 현재 시간 값을 가진 Date 객체 생성
+		document.write("기준 시간 : " + beforedate.toUTCString()
+			+ "<br><hr>");
+		/*document.write(now.getFullYear() + "년도<br>");
+		document.write(now.getMonth() + 1 + "월<br>");
+		document.write(now.getDate() + "일<br>");
+		document.write(now.getHours() + "시<br>");
+		document.write(now.getMinutes() + "분<br>");
+		document.write(now.getSeconds() + "초<br>");
+		document.write(now.getMilliseconds()
+			+ "밀리초<br><hr>");*/
+
+
+		let afetrdate = now - beforedate
+		let abc_sec = afetrdate / 1000;
+		let abc_min = abc_sec / 60;
+		let abc_hour = abc_min / 60;
+		let abc_day = abc_hour / 24;
+		document.write("경과시간 일 :" + Math.round(abc_day) + "<br>");
+		document.write("경과시간 시 :" + Math.round(abc_hour) + "<br>");
+		document.write("경과시간 분 :" + Math.round(abc_min) + "<br>");
+		document.write("경과시간 초 :" + Math.round(abc_sec) + "<br>");
+	</script>
+
+
 </body>
+
 </html>
