--- a/node/project_changul/public/index.html
+++ b/node/project_changul/public/index.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <title>Login</title>
-    <link type="text/css" rel="stylesheet" href="mystyle.css" />
+    <link type="text/css" rel="stylesheet" href="naver.css" />
+    <style>
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-    <h3>Login</h3>
+    <h1>Login</h1>
     <hr />
     <div class="box">
         <form action="/login" name="userForm" method="post">
