--- a/node/zzproject/public/main.html
+++ b/node/zzproject/public/main.html
@@ -31,7 +31,7 @@
                 <p><input type="text" name="userId" placeholder="아이디를 입력하세요." /></p>
             </div>
             <div class="login-input-wrap">
-                <p><input type="text" name="shopName" placeholder="예약을 원하는 가게 이름을 입력하세요." /></p>
+                <p><input type="text" name="shopId" placeholder="예약을 원하는 가게의 Id를 입력하세요. 예)1001" /></p>
             </div>
             <div class="login-input-wrap">
                 <p><input type="text" name="resDate" placeholder="예약을 원하는 날짜를 입력하세요. 예) 2023-00-00" /></p>
@@ -40,13 +40,10 @@
                 <p><input type="text" name="shopService" placeholder="예약을 원하는 서비스명을 입력하세요." /></p>
             </div>
             <div class="login-input-wrap">
-                <p><input type="text" name="shopArea" placeholder="가게가 속한 동을 입력하세요. 예) 논현동" /></p>
-            </div>
-            <div class="login-input-wrap">
                 <input type="submit" value="예약하기" />
             </div>
-
     </form>
+
     <form action="/selectDong" target="targetURL" name="shopForm" method="get">
         <br>
 
