--- a/node/zzproject/public/reservation.html
+++ b/node/zzproject/public/reservation.html
@@ -10,71 +10,47 @@
             text-align: center;
         }
     </style>
+
+
 </head>
 
 <body>
     <h1>예약 정보 확인 및 변경</h1>
-    <script>
-        // function reservationsend() {
-        //     let resNumber = document.getElementById("resNumber");
-        //     let userId = document.getElementById("userId");
-        //     let shopName = document.getElementById("shopName");
-        //     let resDate = document.getElementById("resDate");
-        //     let shopService = document.getElementById("shopService");
-        //     let shopArea = document.getElementById("shopArea");
 
-        //     console.log(resNumber.value);
-        //     console.log(userId.value);
-        //     console.log(shopName.value);
-        //     console.log(resDate.value);
-        //     console.log(shopService.value);
-        //     console.log(shopArea.value);
-        // }
-    </script>
-
-    <form action="/mongoget" target="targetURL" name="shopForm2" method="get">
-
+    <form action="/mongoinsert" target="targetURL" name="shopForm2" method="post">
         <div class="main-container">
             <div class="login-input-wrap">
-                <p><input type="text" id="resNumber" placeholder="휴대전화 번호를 입력하세요. 예) 01012341234" /></p>
+                <p><input type="text" name="resNumber" id="resNumber" placeholder="휴대전화 번호를 입력하세요. 예) 01012341234" />
+                </p>
+            </div>
+
+            <div class="login-input-wrap">
+                <p><input type="text" name="userId" id="userId" placeholder="아이디를 입력하세요." /></p>
             </div>
             <div class="login-input-wrap">
-                <p><input type="text" id="userId" placeholder="아이디를 입력하세요." /></p>
+                <p><input type="text" name="shopId" id="shopId" placeholder="예약을 원하는 가게 이름을 입력하세요." /></p>
             </div>
             <div class="login-input-wrap">
-                <p><input type="text" id="shopName" placeholder="예약을 원하는 가게 이름을 입력하세요." /></p>
+                <p><input type="text" name="resDate" id="resDate" placeholder="예약을 원하는 날짜를 입력하세요. 예) 2023-00-00" /></p>
             </div>
             <div class="login-input-wrap">
-                <p><input type="text" id="resDate" placeholder="예약을 원하는 날짜를 입력하세요. 예) 2023-00-00" /></p>
+                <p><input type="text" name="shopService" id="shopService" placeholder="예약을 원하는 서비스명을 입력하세요." /></p>
             </div>
-            <div class="login-input-wrap">
-                <p><input type="text" id="shopService" placeholder="예약을 원하는 서비스명을 입력하세요." /></p>
-            </div>
-            <div class="login-input-wrap">
-                <p><input type="text" id="shopArea" placeholder="가게가 속한 동을 입력하세요. 예) 논현동" /></p>
+
+
+            <br>
+            <div class=" form-buttons" style="text-align: center;">
+                <input type="button" value="예약확인"
+                    onclick='document.targetURL.location.href=" /mongoget?resNumber="+document.shopForm2.resNumber.value' /><button></button>
+
+
+                <button type="submit" formaction="/mongoupdate">예약 변경</button>&nbsp;&nbsp;
+                <button type="submit" formaction="/mongodelete">예약 취소</button>
             </div>
     </form>
     <br>
-    <form action="/reservationsend" formaction="/mongoget" target="targetURL" name="reservationcheck" method="get">
-        <div class="login-input-wrap">
-            <input type="button" id="reservationcheck" value="예약확인" onclick="reservationsend()" />
-            <br>
-        </div>
-    </form>
-    <form action="/mongoupdate" target="targetURL" name="reservationupdate" method="get">
-        <div class="login-input-wrap">
-            <input type="submit" value="예약변경" />
-            <br>
-        </div>
-    </form>
-    <form action="/mongodelete" target="targetURL" name="reservationdelete" method="post">
-        <div class="login-input-wrap">
-            <input type="submit" value="예약취소" />
-            <br>
-        </div>
-    </form>
-    <div>
-        <!-- <iframe name=" targetURL" width="1000" height="1000" style="border: none" src="/mongolist"></iframe> -->
+    <div style="display: flex; justify-content: center; align-items: center;">
+        <iframe name="targetURL" width="1000" height="1000" style="border: none" src="/mongolist"></iframe>
     </div>
 </body>
 
