--- a/node/zzproject/public/member.html
+++ b/node/zzproject/public/member.html
@@ -2,84 +2,42 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <title>User Authentication</title>
+    <meta charset="UTF-8">
+    <title>관리자 페이지</title>
     <link type="text/css" rel="stylesheet" href="mystyle.css">
-    <script>
-        let id = "";
-        let now = "";
-        function getParameter(name) {
-            name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-            var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
-                results = regex.exec(location.search);
-            return results === null
-                ? ""
-                : decodeURIComponent(results[1].replace(/\+/g, " "));
+    <style>
+        h1 {
+            text-align: center;
         }
-
-        function login() {
-            id = getParameter("id");
-            now = new Date();
-
-            if (!window.sessionStorage) {
-                alert("세션 스토리지를 지원하지 않습니다.");
-                return;
-            }
-
-            sessionStorage.setItem(id, now);
-            let username_v = document.getElementById("username");
-            username_v.innerHTML = `사용자 ${id} 세션 스토리지 생성`;
-        }
-
-        function sessionStore() {
-            if (!id) {
-                alert("잘못된 접근 방식입니다!!");
-                sessionStorage.removeItem("");
-                location.href = "index.html";
-            }
-        }
-
-        window.addEventListener("beforeunload", (event) => {
-            event.preventDefault();
-            event.returnValue = "";
-        });
-
-        function logout() {
-            sessionStorage.removeItem(id);
-        }
-    </script>
+    </style>
 </head>
 
-<body onload="login()" onunload="logout()">
-    <h3>User Authentication</h3>
+<body>
+    <h1>관리자 페이지</h1>
     <hr />
     <nav id="menubar">
         <ul>
-            <li style="float : right;"><a href="/index.html">Logout</a></li>
+            <li style="float : left;"><a href="/main.html">메인페이지</a></li>
+            <li style="float : right;"><a href="/reservation.html">예약페이지</a></li>
         </ul>
     </nav>
-    <form action="/insert" target="targetURL" name="userForm" method="post">
-        <div class="box">
-            <div>
-                <p>Userid : <input type="text" size="15" name="id" /></p>
-                <p>Password : <input type="password" size="15" name="pw" /></p>
-            </div>
-            <div class="box-inner">
-                <input type="button" value="get select"
-                    onclick='document.targetURL.location.href="/select"' />&nbsp;&nbsp;
-                <input type="button" value="get selectQuery"
-                    onclick='document.targetURL.location.href="/selectQuery?id="+document.userForm.id.value' />&nbsp;&nbsp;
-                <input type="submit" value="post insert" />&nbsp;&nbsp;
-                <br>
-                <button type="submit" formaction="/update">post update</button>&nbsp;&nbsp;
-                <button type="submit" formaction="/delete">post delete</button>
-            </div>
+    <div class="main-container">
+
+        <div class="login-input-wrap">
+            <input type="button" value="전체 가게 정보 확인" onclick='document.targetURL.location.href="/select"' />
         </div>
-        <hr />
-    </form>
-    <div class="box-2">
-        <iframe name="targetURL" width="70%" height="500" style="border: none" src="/hello"></iframe>
-    </div>
+
+        <div class="login-input-wrap">
+            <input type="button" value="전체 고객 정보 확인" onclick='document.targetURL.location.href="/userselect"' />
+        </div>
+
+        <div class="login-input-wrap">
+            <input type="button" value="전체 예약 정보 확인" onclick='document.targetURL.location.href="resselect"' />
+        </div>
+        <br>
+        <div>
+            <iframe name="targetURL" width="1000" height="1000" style="border: none" src=""></iframe>
+        </div>
 </body>
 
 </html>
